text alignment inside sidebar dropdown is fixed

--- a/NextGenSoftware.OASIS.API.ONODE.WebUI.HTML/wwwroot/assets/css/style.css
+++ b/NextGenSoftware.OASIS.API.ONODE.WebUI.HTML/wwwroot/assets/css/style.css
@@ -1509,7 +1509,15 @@ form {
 .side__list .side__item a {
   padding-left: .25em;
   border-left: .25em solid #00000000;
-  transition: all .1s
+  transition: all .1s;
+  display: block;
+  line-height: 22px;
+}
+.side__list .side__item .sub-menu li {
+  margin: 0 0 10px;
+}
+.side__list .side__item .sub-menu li:last-child {
+  margin: 0;
 }
 
 .side__list .js-nav__login>a {
